Relax react dependency

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "src"
   ],
   "peerDependencies": {
-    "react": "0.x"
+    "react": ">=0.14"
   },
   "devDependencies": {
     "babel": "^6.5.1",
